
    TAJO-1907: Reduce the size of the INDEXES table's COLUMN_NAMES field.
    (jihoon)

    TAJO-1908: Add a link to the nightly build version to the download page.
    (jihoon)

    TAJO-1915: Add a TajoClient example for creating and getting tables.
    (hyunsik)

    TAJO-1893: Remove unused import. (Contributed by Dongkyu Hwangbo, 
    Committed by jihoon)

  SUB TASKS

    TAJO-1480: Kafka Consumer for kafka strage. 
    (Contributed by Byunghwa Yun. Committed by jinho)

    TAJO-2156: Create GeoIP functions taking various types instead of INET4 type. (Jongyoung)

    TAJO-2130: Remove inet4 data type.
    (Contributed by Jongyoung Park. Committed by jihoon)

    TAJO-1997: Registering UDF, it needs to check duplication.
    (Contributed by Jongyoung Park. Committed by jihoon)

    TAJO-2024: Remove getContentSummary from HCatalogStore. (hyunsik)

    TAJO-2004: S3TableSpace needs to extend FileTableSpace. (jaehwa)

    TAJO-1960: Separate HDFS space handler and S3 space handler. (jaehwa)

    TAJO-1856: Add a description about the relationship of tablespace, managed 
    table, and external table to Tablespace section of Table Management 
    chapter. (Contributed by Jongyoung Park. Committed by jihoon)

    TAJO-1922: Allow date types with IN operator for partition pruning. (jaehwa)

    TAJO-1967: Replace 'try finally' with 'try' with resources.
    (Contributed by Dongkyu Hwangbo, Committed by jihoon)

    TAJO-1947: Change Projection::setNamedExprs and getNamedExprs to set and 
    get List<NamedExpr>. (Contributed by Dongkyu Hwangbo, Committed by hyunsik)

    TAJO-1946: Change Projectable::setTargets and getTargets to set and get
    List<Target>. (Contributed by Dongkyu Hwangbo, Committed by jihoon)

    TAJO-1877: Adopt try-resource statement to AbstractDBStore. 
    (Contributed by Dongkyu Hwangbo, Committed by jihoon)

    TAJO-1653: Add 'INSERT INTO VALUES' statement for OLTP-like storages.
    (hyunsik)
