@@ -408,6 +408,8 @@ Release 0.12.0 - unreleased
 
   SUB TASKS
 
+    TAJO-2174: Implement HiveCatalogStore#alterTable. (Lee Dongjin via jinho)
+
     TAJO-1480: Kafka Consumer for kafka strage. 
     (Contributed by Byunghwa Yun. Committed by jinho)
 
